# Aurora-ASR-self-healing-CI-CD-Agent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  README_ADVANCED.md  app.py  hackathon_demo.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
agents/: base_agent.py  example_repair_agent.py  hybrid_actor_critic_agent.py
environment/: action_space.py  asr_env.py  gym_integration.py  models.py  observation_space.py  reward_logic.py  sandbox.py  scenario_generator.py  tree_sitter_parser.py
examples/sample_buggy_code/src/: calculator.py
notebooks/: 01_training_quickstart.ipynb  02_evaluation_analysis.ipynb
server/: app.py
tasks/easy/src/: calculator.py
tasks/easy/tests/: test_calculator.py
tasks/hard/src/: processor.py
tasks/hard/tests/: test_processor.py
tasks/medium/src/: math_utils.py
tasks/medium/tests/: test_math.py
tests/: test_advanced_components.py  test_environment.py
training/: evaluate_agent.py  train_hybrid_agent.py
